--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tailwind_landing_page",
-  "description": "Landing page using next js, tailwind css and daisy UI. Template uses rich tailwind css utility classes and have components of daisy UI.",
+  "name": "snapifies_landing_page",
+  "description": "Snapifies landing page",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,10 +8,6 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/srobbin01/daisyui-nextjs-landing-page"
   },
   "keywords": [
     "reactjs",
@@ -21,11 +17,7 @@
     "landing=page-template",
     "nextjs"
   ],
-  "author": "srobbin01",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/srobbin01/daisyui-nextjs-landing-page/issues"
-  },
   "dependencies": {
     "@heroicons/react": "^2.0.15",
     "@next/font": "13.1.6",
