--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "crisp-sdk-web": "^1.0.21",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "framer-motion": "^11.3.7",
     "mixpanel-browser": "^2.48.1",
     "next": "^14.0.3",
     "nextjs-google-analytics": "^2.3.3",
